--- a/app/src/main/res/layout/activity_recyclerview_me.xml
+++ b/app/src/main/res/layout/activity_recyclerview_me.xml
@@ -1,28 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".activity.MainActivity">
+    tools:context=".activity.RecyclerViewMeActivity">
 
-    <Button
-        android:id="@+id/btn_rv_me"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="RecyclerView mime"
-        android:onClick="onRvMeClcik"
-        />
-
-    <Button
-        android:id="@+id/btn_rv_mooc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:onClick="onRvMoocClcik"
-        android:text="RecyclerView imooc"/>
-</LinearLayout>
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:layout_height="match_parent"/>
+</RelativeLayout>
