--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,10 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <!--控件主题颜色-->
         <item name="colorAccent">@color/colorAccent</item>
+        <!--文字是否全为大写-->
+        <item name="android:textAllCaps">false</item>
     </style>
 
 </resources>
